Fix spacing and add another grid

--- a/css/main.css
+++ b/css/main.css
@@ -9,13 +9,10 @@ h1 {
 article {
   border-top-style: solid;
   border-top-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
   border-top-color: #e2e2e2;
-}
-
-section {
-  border-top-style: solid;
-  border-top-width: 1px;
-  border-top-color: #e2e2e2;
+  border-bottom-color: #e2e2e2;
 }
 
 footer {
@@ -53,4 +50,13 @@ a:hover {
   border-bottom-style: solid;
   border-bottom-color: #0084a6;
   border-bottom-width: 2px;
+}
+
+@media only screen and (min-width: 60em) {
+
+  nav {
+    text-align: right;
+    padding-top: 40px;
+  }
+
 }
